2011.049:
	- Update libmseed to 2.6.
	- Update libdali to 1.4.
	
2009.220: 
	- Implement keepalive sending properly by tracking last IO to
	server and using dl_exchangeIDs().

2008.256:
	- Update libdali to 1.1.
	- Rework sendrecord() to include endtime for new API.
	- Remove seedutil.[ch] sources and convert usage to libmseed.

2008.196:
	- Update libdali to 1.0.

2008.115:
	- Add count of new bytes to diagnostic message when skipping
	a file until the next scan due to a bad read.

2008.109:
	- When miniSEED is not detected for a read from a file
	from which miniSEED was previously read keep the file in
	question during subsequent scans.  This should handle a
	race condition where attributes indicate a file has been
	modified but the new data is not available when reading.

2000.108:
	- Use the O_RSYNC flag when opening a file for reading under
	Solaris (other OSes do not support this flag).

2008.087:
	- Directory entries are processed in sorted order, add
	src/edir.[ch] which implement this sorting.

2008.077:
	- Update libdali to 0.9.4.

2008.075:
	- Remove redundant write error message.
	- Add shim function to print libdali messages via lprintf.

2008.074:
	- Update libdali to 0.9.2.

2008.059:
	- Add libdali to sources and use it to manage connection to
	ringserver.
	- Add -k option to specify keep alive interval.
	- Add -A option to require server acknowledgements.

2008.056:
	- Check for existence of base directory before starting the
	recursive scan and only log an error once per change if the
	directory cannot be found.

2008.052:
	- Update DataLink WRITE command syntax.

2008.051:
	- When writing state file first write to a temporary file and
	then move the temporary file into place, this avoids partial
	state file writes when the program is killed while writing.

2008.028:
	- Change DataLink synchronization bytes to 'DL'.

2008.017:
	- Add -sz option to sleep between scans only when no records
	were read during the previous scan.