@@ -1,6 +1,9 @@
 2011.049:
 	- Update libmseed to 2.6.
 	- Update libdali to 1.4.
+	- Remove file modification time check from update check, files
+	will be processed if they have increased in size. Avoids skipping
+	data being written very quickly, thanks to Doug Neuhauser.
 	
 2009.220: 
 	- Implement keepalive sending properly by tracking last IO to
